--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 </div>
 
 <div id="cta2" class="mt-4 d-none">
-<a href="https://pay.kiwify.com.br/INQYG73" class="a-btn" style="text-decoration: none;">
+<a href="https://pay.kiwify.com.br/alLPn6s" class="a-btn" style="text-decoration: none;">
 <span class="span-btn">QUERO OBTER ACESSO!</span>
 <span class="span-btn2">(ATENÇÃO: Vagas Limitadas)</span>
 </a>
